--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+    font-family: 'Marck Script', cursive;
+    background-color: #343a40
+
+}
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Marck+Script&display=swap');
