--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -3,3 +3,21 @@
         <h1>NerinSoap</h1>
     </div>
 </div>
+<div class="container" style="margin-top: 3%; margin-bottom: 10%;">
+    <h1 style="color: white;">Productos más destacados</h1>
+    <div class="row" style="margin-top: 3%;">
+        <div class="col-12 col-sm-8 col-md-4 " *ngFor="let item of items">
+            <div class="card">
+                <img :src="../../assets/images/{{item.nombre}}" class="card-img-top mx-auto d-block">
+                <div class="card-body">
+                    <div class="card-title">
+                        Lorem ipsum dolor sit.
+                    </div>
+                    <div class="dropdown-divider"></div>
+                    <div class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto rerum recusandae minus accusantium porro odio voluptatibus placeat ea aut voluptates.
+                    </div>
+                </div>
+            </div>
+        </div>
+</div>
