carousel inicio no se ven los botones

--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -24,6 +24,8 @@
     margin-bottom: 2%;
     background-color: gray;
     color: whitesmoke;
+    width: 300px;
+    height: 500px;
 }
 
 .card-title{
