--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -5,19 +5,23 @@
 </div>
 <div class="container" style="margin-top: 3%; margin-bottom: 10%;">
     <h1 style="color: white;">Productos más destacados</h1>
-    <div class="row" style="margin-top: 3%;">
-        <div class="col-12 col-sm-8 col-md-4 " *ngFor="let item of items">
-            <div class="card">
-                <img :src="../../assets/images/{{item.nombre}}" class="card-img-top mx-auto d-block">
-                <div class="card-body">
-                    <div class="card-title">
-                        Lorem ipsum dolor sit.
+    <p-carousel [value]="productos" [autoplayInterval]="3000" [circular]="true"  [numVisible]="3" [numScroll]="1" >
+        <ng-template let-product pTemplate="item">
+            <div class="product-item">
+                <div class="product-item-content">
+                    <div class="p-mb-3">
+                        <img src="assets/images/{{product.image}}" [alt]="product.name" class="product-image" />
                     </div>
-                    <div class="dropdown-divider"></div>
-                    <div class="card-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto rerum recusandae minus accusantium porro odio voluptatibus placeat ea aut voluptates.
+                    <div>
+                        <h4 class="p-mb-1">{{product.name}}</h4>
+                        <h6 class="p-mt-0 p-mb-3">{{product.price}}€</h6>
+                        <div class="car-buttons p-mt-5">
+                            <p-button type="button" styleClass="p-button p-button-rounded p-mr-2" icon="pi pi-search"></p-button>
+                            <p-button type="button" styleClass="p-button-success p-button-rounded p-mr-2" icon="pi pi-star"></p-button>
+                            <p-button type="button" styleClass="p-button-help p-button-rounded" icon="pi pi-cog"></p-button>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
+            </div>        </ng-template>
+    </p-carousel>
 </div>
