--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -20,18 +20,32 @@
     padding-top: 15%;
 }
 
+.p-carousel {
+    display: none;
+  }
+
+
 .card{
-    margin-bottom: 2%;
     background-color: gray;
     color: whitesmoke;
+    height: 400px;
     width: 300px;
-    height: 500px;
-}
+    font-family: 'Marck Script', cursive;
+    margin-left: 2%;
 
-.card-title{
-    font-size: 1.75em;
 }
 
 .card-text{
     font-size: 1.2em;
 }
+
+.card-text h4, h6{
+    text-align: center;
+    margin-top: 3%;
+}
+
+.card-text p{
+    margin-left: 5%;
+}
+
+
