--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -5,13 +5,13 @@
 </div>
 <div class="container" style="margin-top: 3%; margin-bottom: 10%;">
     <h1 style="color: white;">Productos más destacados</h1>
-    <p-carousel [value]="productos" [autoplayInterval]="3000" [circular]="true"  
-                 [responsiveOptions]="responsiveOptions" styleClass="custom-carousel">
+    <p-carousel [value]="productos" [circular]="true"  
+                [numVisible]="3" [numScroll]="3" [responsiveOptions]="responsiveOptions" styleClass="custom-carousel">
         <ng-template let-product pTemplate="item">
             <div class="product-item">
                 <div class="product-item-content">
-                    <div class="p-mb-3 card">
-                        <img src="assets/images/{{product.image}}" [alt]="product.name" class="product-image" />
+                    <div class=" card">
+                        <img src="assets/images/{{product.image}}" [alt]="product.name" class="product-image ml-3 mt-2" height="200px" width="90%" />
                         <div class="card-text"> 
                             <h4 class="p-mb-1">{{product.name}}</h4>
                             <h6 class="p-mt-0 p-mb-3">{{product.price}}€</h6>
