--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -4,8 +4,8 @@
     </div>
 </div>
 <div class="container" style="margin-top: 3%; margin-bottom: 10%;">
-    <h1 style="color: white;">Productos más destacados</h1>
-    <p-carousel [value]="productos" [circular]="true"  
+    <h1 style="color: whitesmoke;">Productos más destacados</h1>
+    <p-carousel [value]="productos" [circular]="true"  [autoplayInterval]="3000"
                 [numVisible]="3" [numScroll]="3" [responsiveOptions]="responsiveOptions" styleClass="custom-carousel">
         <ng-template let-product pTemplate="item">
             <div class="product-item">
