dataWiev instalado primeflex, falta hacer responsive

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,14 +13,14 @@
           <a class="nav-link" href="/about" >Sobre mí</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="/productos" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Productos
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="/productos">Geles sólidos</a>
+            <a class="dropdown-item" href="/productos">Champús sólidos</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="/productos">Otros</a>
           </div>
         </li>
         <li class="nav-item">
