--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -3,21 +3,21 @@
         <h1>Productos</h1>
     </div>
     <p-dataView #dv [value]="productos" [paginator]="true" [rows]="6" filterBy="name"
-                [sortField]="sortField" [sortOrder]="sortOrder" layout="grid" p-dataview-grid>        
+                [sortField]="sortField" [sortOrder]="sortOrder" layout="grid" p-dataview-grid [rowsPerPageOptions]="['3','6','9']">        
         <ng-template pTemplate="header">
-            <div class="p-d-flex p-flex-column p-flex-md-row p-jc-md-between">
-                <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Sort By Price" (onChange)="onSortChange($event)" styleClass="p-mb-2 p-mb-md-0"></p-dropdown>
+            <div class="p-d-flex p-flex-column p-flex-md-row p-jc-md-around mt-md-4">
+                <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Ordenar por precio" (onChange)="onSortChange($event)" styleClass="p-mb-2 p-mb-md-0"></p-dropdown>
                 
-                <input type="search" pInputText placeholder="Buscar por nombre" (input)="dv.filter($event.target.value)" class="bg-dark">
 
-                <span class="p-input-icon-right p-mb-2 p-mb-md-0 mb-2">
-                    <i class="pi pi-search bg-dark"></i>
+                <span class="p-input-icon-left p-mb-2 p-mb-md-2">
+                    <i class="pi pi-search ml-0" ></i>
+                    <input type="search" pInputText placeholder="Buscar por nombre" (input)="dv.filter($event.target.value)" class="bg-dark pl-5" id="">
                 </span>
             </div>
         </ng-template>
 
         <ng-template let-product pTemplate="gridItem">
-            <div class="p-col-12 p-md-4">
+            <div class="p-col-12  p-md-4">
                 <div class="product-grid-item card bg-dark">
                     <div class="product-grid-item-top">
                         <div class="cat">
