--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -26,7 +26,7 @@
                         </div>
                     </div>
                     <div class="product-grid-item-content">
-                        <img src="assets/images/{{product.image}}" [alt]="product.name"/>
+                        <img src="assets/images/{{product.img}}" [alt]="product.name"/>
                         <div class="product-name">{{product.name}}</div>
                         <hr class="my-4">
                         <div class="product-description">{{product.description}}</div>
