tabla de productos para poder gestionarlos, interfaz hecha, faltan metodos

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,4 @@
 <footer class="footer  bg-dark text-light">
-    <div style="text-align: center;">Lorem ipsum dolor sit amet.</div>
+    <div style="text-align: center;">Lorem ipsum dolor sit amet.<br>
+    <a href="/gestor">Gestión de productos</a></div>
 </footer>
